@@ -6,7 +6,10 @@ name           'Class-Method-Modifiers';
 all_from       'lib/Class/Method/Modifiers.pm';
 githubmeta;
 
+requires 'Sub::Name';
 test_requires 'Test::Fatal';
+test_requires 'Test::More';
+test_requires 'Class::MOP';
 
 WriteAll;
 
