@@ -1,5 +1,9 @@
 Revision history for Class-Method-Modifiers
 
+{{$NEXT}}
+        Install modified subs in the proper namespace; fixes RT#74569.
+        (Karen Etheridge)
+
 1.08    Sun Oct 16 2011
         Document install_modifier (requested by Tokuhiro Matsuno)
 
